--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,12 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
-group 'com.pucmm.edu'
+group 'com.joshua.practica1'
 version '1.0-SNAPSHOT'
+
+mainClassName='com.joshua.practica1.Main'
 
 sourceCompatibility = 1.8
 
@@ -12,9 +15,8 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    // jsoup HTML parser library @ https://jsoup.org/
+    compile 'org.apache.httpcomponents:httpclient:jar:4.5.6'
     compile 'org.jsoup:jsoup:1.11.3'
+
+    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
-
-
